@@ -11,7 +11,7 @@ function parseBrowseResp(data, parent, options, idStart) {
     var resp = {items: [], baseActions:[], grid: false };
 
     if (data && data.result) {
-        console.log("RESP", JSON.stringify(data.result, null, 2), parent);
+        //console.log("RESP", JSON.stringify(data.result, null, 2), parent);
         if (parent.id && TOP_SEARCH_ID===parent.id) {
             if (data.result.contributors_loop && data.result.contributors_count>0) {
                 resp.items.push({header: i18n("Artists")});
